--- a/image_inpainting.ipynb
+++ b/image_inpainting.ipynb
@@ -8,6 +8,12 @@
    "source": [
     "from image_py_scripts import run_image_inpainting, convmc\n",
     "import os\n",
+    "import torch \n",
+    "from skimage import io, color, img_as_float\n",
+    "from skimage.metrics import peak_signal_noise_ratio as psnr\n",
+    "from skimage.metrics import structural_similarity as ssim\n",
+    "import numpy as np\n",
+    "import math\n",
     "ROOT = 'C:/Users/Talha/OneDrive - Higher Education Commission/Documents/GitHub/convmc-net/'\n",
     "DATA_PATH = os.path.join(ROOT, 'Image_Inpainting_Data')\n",
     "SYNTHETIC_DATA_PATH = os.path.join(ROOT, 'Image_Inpainting_Dataset')\n"
@@ -40,6 +46,169 @@
     "    return params_net\n",
     "\n",
     "model = convmc.UnfoldedNet2dC_convmc(get_default_param(gpu = False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Directory where the files are located\n",
+    "directory = SYNTHETIC_DATA_PATH\n",
+    "\n",
+    "# Template for the file path\n",
+    "template = \"Q {percentage}.0%/DB 5.0/Saved Models - Dict/ConvMC-Net/Session_1/ConvMC-Net_Sampling{percentage}.0%_GMM5.0_Layers_5_TrainInstances_20_Epochs_[20_out_of_20]_lr_0.12.pth\"\n",
+    "\n",
+    "# Define the directory for saving plots\n",
+    "save_directory = os.path.join(SYNTHETIC_DATA_PATH, \"psnr_ssim_5db\")\n",
+    "\n",
+    "# List to store file paths\n",
+    "file_paths = []\n",
+    "\n",
+    "# Iterate over percentages from 20 to 80\n",
+    "for percentage in range(20, 81, 10):\n",
+    "    # Construct the file path\n",
+    "    file_path = os.path.join(directory, template.format(percentage = percentage))\n",
+    "    # Append the file path to the list\n",
+    "    file_paths.append(file_path)\n",
+    "\n",
+    "image_path = os.path.join(DATA_PATH, f\"{1}.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[0.23344275, 0.26089373, 0.29226627, ..., 0.48203922, 0.46830235,\n",
+       "         0.46045922],\n",
+       "        [0.44391686, 0.42430902, 0.40077961, ..., 0.52008235, 0.52008235,\n",
+       "         0.51616078],\n",
+       "        [0.51616078, 0.51223922, 0.51616078, ..., 0.2909051 , 0.26317137,\n",
+       "         0.23208157],\n",
+       "        ...,\n",
+       "        [0.25109333, 0.25333333, 0.25333333, ..., 0.25166667, 0.2477451 ,\n",
+       "         0.2477451 ],\n",
+       "        [0.2477451 , 0.2477451 , 0.24831059, ..., 0.19030549, 0.19030549,\n",
+       "         0.19422706],\n",
+       "        [0.19058824, 0.19058824, 0.18666667, ..., 0.18613098, 0.19005255,\n",
+       "         0.19340863]]),\n",
+       " tensor([[ 0.0488,  0.0000,  0.0000,  ...,  0.0000,  0.5331,  0.0000],\n",
+       "         [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "         [-7.7195,  0.0000,  0.0000,  ...,  0.2257,  0.0000,  0.0000],\n",
+       "         ...,\n",
+       "         [ 0.0000,  0.0000,  0.0000,  ...,  0.1972,  0.0000,  0.1711],\n",
+       "         [ 0.0000,  0.1778,  0.0000,  ...,  0.2713,  0.2237,  0.0000],\n",
+       "         [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.2647]],\n",
+       "        dtype=torch.float64))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M = run_image_inpainting.read_and_preprocess_image(image_path, 150, 300)\n",
+    "\n",
+    "# Add GMM noise\n",
+    "M_Omega = run_image_inpainting.add_gmm_noise(M, 0.2, 5.0)\n",
+    "maxiter = 50\n",
+    "\n",
+    "M, M_Omega\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_path = 'C:/Users/Talha/OneDrive - Higher Education Commission/Documents/GitHub/convmc-net/Image_Inpainting_Data/BSDS300/images/Q 20.0%/DB 5.0/Saved Models - Dict/ConvMC-Net/Session_1/_Layers_5_TrainInstances_20_Epochs_[1_out_of_1]_lr_0.12.pth'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.28995562, 1.16627109, 1.05316937, ..., 0.66688073, 1.00448418,\n",
+       "        1.20678604],\n",
+       "       [0.84769791, 0.76224387, 0.70050806, ..., 0.43909717, 0.65943325,\n",
+       "        0.79612249],\n",
+       "       [0.63212061, 0.56784844, 0.54682362, ..., 0.3264319 , 0.48022199,\n",
+       "        0.57869768],\n",
+       "       ...,\n",
+       "       [0.77536666, 0.71024162, 0.70269692, ..., 0.40568632, 0.60940713,\n",
+       "        0.71733671],\n",
+       "       [0.95976812, 0.87258971, 0.84529436, ..., 0.49868235, 0.74161875,\n",
+       "        0.88221568],\n",
+       "       [0.64423579, 0.59422421, 0.47367048, ..., 0.3386595 , 0.5219565 ,\n",
+       "        0.63155097]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# model_path = file_paths[0].replace('\\\\', '/')\n",
+    "model.load_state_dict(torch.load(model_path, map_location = 'cpu'))\n",
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    M_omega_reconstructed = (model([M_Omega]))[0][1]\n",
+    "    M_omega_reconstructed = M_omega_reconstructed.numpy()\n",
+    "    M_omega_reconstructed = M_omega_reconstructed.astype(np.float64)\n",
+    "\n",
+    "M_omega_reconstructed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(dtype('float64'), dtype('float64'))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M.dtype, M_omega_reconstructed.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.40063827292429155"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssim(M, M_omega_reconstructed, data_range = M_omega_reconstructed.max() - M_omega_reconstructed.min())"
    ]
   },
   {
