--- a/convmc.ipynb
+++ b/convmc.ipynb
@@ -282,6 +282,26 @@
       "Loading and calculating validation batches...\n",
       "Test time is 16.636991\n",
       "Epoch: 11, 2024-05-11 00:43:55, \n",
+      "\n",
+      "Epoch: 12, 2024-05-11 00:44:56, \n",
+      "\n",
+      "Epoch: 13, 2024-05-11 00:45:38, \n",
+      "\n",
+      "Epoch: 14, 2024-05-11 00:46:07, \n",
+      "\n",
+      "Epoch: 15, 2024-05-11 00:46:33, \n",
+      "\n",
+      "Loading and calculating training batches...\n",
+      "Training time is 23.406102\n",
+      "Loading and calculating validation batches...\n",
+      "Test time is 5.544024\n",
+      "Epoch: 16, 2024-05-11 00:47:02, \n",
+      "\n",
+      "Epoch: 17, 2024-05-11 00:47:30, \n",
+      "\n",
+      "Epoch: 18, 2024-05-11 00:48:03, \n",
+      "\n",
+      "Epoch: 19, 2024-05-11 00:48:30, \n",
       "\n"
      ]
     }
